--- a/Day3/style.css
+++ b/Day3/style.css
@@ -8,7 +8,6 @@
     flex-wrap: wrap;
     height: 500px;
     align-content: space-around;
-    flex-direction ;
 }
 
 .box1, .box2, .box3 {
@@ -18,6 +17,36 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/* p:before {
+    content: "before";
+    font-size: 44px;
+    color: #c22631;
+} */
+
+p:before {
+    content: "";
+    background-image: url("./hot-drink.png");
+    width: 32px;
+    height: 32px;
+    display: block;
+
+}
+
+p {
+    font-size: 16px;
+    color: #33c226;
+    text-align: center;
+}
+
+p:after {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 2px;
+    background-color: #5a5a5a;
+    margin: auto;
 }
 
 .box1 {
