--- a/module-04/style.css
+++ b/module-04/style.css
@@ -96,8 +96,7 @@ header, main, footer {
     /* padding: 10px;
     font-size: 24px; */
     color: #ffffff;
-    font-weight: 700;
-    
+    /* font-weight: 700; */
 }
 
 .name {
