--- a/class-day-05/css/style.css
+++ b/class-day-05/css/style.css
@@ -171,21 +171,76 @@
 
 /* Оформления содержимого контейнера .expertise */
 .expertise {
+    width: 940px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 70px auto;
+    line-height: 16px;
+    color: #413d4b;
+    }
 
+.expertise-subtitle {
+    margin-top: 18px;
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #8e8d90;
 }
-/* 
+
+.expertise-subtitle::after {
+    content: "";
+    display: block;
+    margin: auto;
+    width: 50px;
+    height: 2px;
+    background-color: #c6c4c9;
+    margin-top: 18px;
+}
+
+.expertise-block {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 48px;
+    list-style: none;
+}
 
 .block-item {
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
+    width: 312px;
+    height: 250px;
+    border-right: 1px solid #ebebeb;
+    border-bottom: 1px solid #ebebeb;
+    text-align: center;
 }
 
-.block-item:nth-last-child(3n) {
+.block-item:nth-child(3n) {
     border-right: none;
 }
 
 .block-item:nth-last-child(-n+3) {
-    border-boton: none;
+    border-bottom: none;
 }
- 
-*/
+
+.block-item__img {
+    margin-top: 39px;
+}
+
+.block-item__title {
+    margin-top: 35px;
+    font-family: Roboto;
+    font-weight: 900;
+    font-size: 14px;
+    color: #413d4b;
+}
+
+.block-item__text {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    color: #8f8f8f;
+    margin-top: 25px;
+    max-width: 254px;
+    text-align: center;
+    line-height: 2;
+    letter-spacing: .7px;
+}
