--- a/class-day-06/css/styles.css
+++ b/class-day-06/css/styles.css
@@ -26,7 +26,7 @@
     position: absolute;;
     left: 50%;
     top: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translate(-50%, -50%);
 }
 
 .block3 {
