--- a/class-day-06/css/styles.css
+++ b/class-day-06/css/styles.css
@@ -1,83 +1,60 @@
-.block1, .block2, .block3 {
-    width: 200px;
-    height: 200px;
-    border: 3px solid #000;
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
-.wrapper {
-    position: relative;
-    width: 600px;
-    height: 600px;
-    border: 3px solid #000;
-    margin: 0 auto;
-    background-color: lightgreen
+.bg-video {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
 }
 
-.block1 {
-    background-color: red;
+.bg-video::before {
+    content: "";
     position: absolute;
     top: 0;
-    left: 50px;
-    z-index: -3;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
 
-.block2 {
-    display: none;
-    background-color: yellow;
-    position: absolute;;
+.fs-bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.content {
+    width: 100%;
+    position: absolute;
     left: 50%;
     top: 50%;
+    z-index: 999;
+    text-align: center;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    border-radius: 50%;
 }
 
-.block3 {
-    background-color: green;
-    position: absolute;
-    bottom: 40%;
-    right: 75px;
-    z-index: -3;
+.content h1 {
+    font-size: 48px;
+    color: white;
 }
 
-.hover:hover .block2{
+.content h1 p {
+    font: 300 18px "Roboto", sans-serif;
+    color: white;
     display: block;
-}
-
-.header, .footer {
-    font-size: 36px;
-    text-align: center;
-    /* position: fixed; */
-    padding:  10px;
-    background-color: blanchedalmond;
-    width: 100%;
-    z-index: 10;
-}
-
-.footer {
-    bottom: 0;
-}
-
-.totop {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    text-align: center;
-
-    border: 1px solid black;
-    border-radius: 50%;
-    bottom: 0;
-    right: 0;
-    z-index: 100;
-}
-
-.submenu, .sub-submenu {
-    display: none;
-}
-
-.goods:hover .submenu {
-    display: block;
-}
-
-.wine:hover .sub-submenu {
-    display: block;
+    margin: 100px auto;
 }
