--- a/module-04/css/style.css
+++ b/module-04/css/style.css
@@ -139,3 +139,11 @@ header, main, footer {
     border: 1px solid red;
     margin-top: 30px;
 }
+
+.news-item-button{
+    background-color: #4ec6ab;
+    width: 159px;
+    height: 51px;
+    border: none;
+    border-radius: 4px;
+}
