--- a/class-day-12/morning task/css/styles.css
+++ b/class-day-12/morning task/css/styles.css
@@ -2,3 +2,49 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    display: block;
+    margin: 8px;
+}
+
+
+/* Task 1-3 */
+/* td{
+    border: 1px solid black;
+} */
+
+
+/* Task 4 */
+/* table{
+    width: 600px;
+}
+
+.one{
+    width: 25%;
+} */
+
+
+/* Task 5 */
+/* body {
+    display: block;
+    margin: 8px;
+}
+
+input, textarea{
+    margin-bottom: 15px;
+} */
+
+
+/* Task 6 */
+
+
+/* Task 7 */
+label{
+    border: 1px solid red;
+}
+
+.box{
+    border: 1px solid black;
+    padding: 5px;
+}
