--- a/module-04/css/style.css
+++ b/module-04/css/style.css
@@ -45,7 +45,7 @@ header, main, footer {
 .news-title {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
-    font-size: 30pt;
+    font-size: 48px;
     text-align: center;
     text-transform: uppercase;
     color: #515151;
@@ -55,7 +55,6 @@ header, main, footer {
 .news-title::after {
     content: "";
     display: block;
-    margin: auto;
     width: 164px;
     height: 7px;
     background-color: #1abc9c;
@@ -100,7 +99,7 @@ header, main, footer {
     background-color: #323232;
 }
 
-.prod-paragraf:hover {
+.prod-item:hover .prod-paragraf{
     background-color: #1abc9c;
 }
 
@@ -125,6 +124,14 @@ header, main, footer {
     padding-top: 105px;
 }
 
+.news-title{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 48px;
+    text-transform: uppercase;
+    color: #515151;
+}
+
 .news-list {
     list-style: none;
     width: 1110px;
@@ -138,6 +145,23 @@ header, main, footer {
     width: 350px;
     border: 1px solid red;
     margin-top: 30px;
+}
+
+.news-item-title{
+    margin-top: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    color: #0f0101;
+}
+
+.news-item-title::after {
+    content: "";
+    display: block;
+    width: 136px;
+    height: 3px;
+    background-color: #1abc9c;
+    margin-top: 11px;
 }
 
 .news-item-button{
