--- a/module-08/css/styles.css
+++ b/module-08/css/styles.css
@@ -1,10 +1,3 @@
-@media(min-device-pixel-ratio:2){
-    .head{
-        padding-top: 21px;
-        background-image: url(../img/header-bg@2X.png);
-    }     
-}
-
 /* montserrat-700 - latin */
 @font-face {
     font-family: 'Montserrat';
@@ -15,7 +8,7 @@
          url('../fonts/montserrat-v12-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('../fonts/montserrat-v12-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
          url('../fonts/montserrat-v12-latin-700.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/montserrat-v12-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v12-latin-700.ttf') format('truetype'); /* Safari, Android, iOS */
 }
 
 /* roboto-300 - latin */
@@ -28,7 +21,7 @@
          url('../fonts/roboto-v18-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('../fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
          url('../fonts/roboto-v18-latin-300.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/roboto-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/roboto-v18-latin-300.ttf') format('truetype'); /* Safari, Android, iOS */
 }
 
 *{
@@ -37,13 +30,20 @@
 }
 
 
-/* header stylesheet */
-.head{
-    padding: 21px 16px 139px;
-    background-image: url(../img/header-bg@1X.png);
-    background-color:rgba(0, 0, 0, .5);
-    background-position: center 0;
+/* --- HEADER --- */
+.header{
+    font-family: 'Montserrat';
     color: #ffffff;
+    padding: 1.3125rem 1.3125rem 8.6875rem;
+    background-image: url(../img/header-bg@1X.png);
+    background-size: cover;
+    background-color:rgba(0, 0, 0, 1);
+    background-position: center 0;
+}
+@media(min-device-pixel-ratio:2){
+    .header{
+        background-image: url(../img/header-bg@2X.png);
+    }     
 }
 
 .nav{
@@ -54,15 +54,19 @@
 
 .nav-logo{
     order: 1;
+    margin-top: 37.5%;
+    width: 100%;
+    text-align: center;
 }
 
 .nav-logo-text{
     text-transform: uppercase;
-    font-style: 20px;
+    font-size: 20px;
+    color: inherit;
+    text-decoration: none;
 }
 
 .nav-menu{
-    font-family: 'Montserrat';
     font-size: 14px;
     width: 10rem;
     display: flex;
@@ -70,49 +74,67 @@
 }
 
 .nav-menu-item{
-    padding: 8px 14px;
-    color: #ffffff;
+    padding: 0.5rem 0.875rem;
+    color: inherit;
     text-decoration: none;
 }
 
 .nav-menu-item:hover{
-    padding: 6px 12px;
+    padding: 0.375rem 0.75rem;
     border: 2px solid #fff;
     border-radius: 45px;
 }
 
 .find{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .find-h{
-    font-family: 'Montserrat';
-    font-size: 30px;
+    
+    font-size: 28px;
     text-transform: uppercase;
+    text-align: center;
+    margin-top: 10%;
 }
 
 .find-p{
     font-family: 'Roboto';
     font-size: 18px;
-    padding: 19px 0;
-    width: 220px;
+    text-align: center;
+    margin: 5% 10%;
 }
 
 .find-button{
-    font-family: 'Montserrat';
+    font-family: inherit;
     font-size: 14px;
-    color: #ffffff;
-    width: 280px;
-    height: 40px;
+    color: inherit;
+    padding: 0.725rem 2.925rem;    
     background-color: #ff4e50;
     border: 0;
     border-radius: 20px;
 }
 
 
-
+/* --- MAIN --- */
+.main{
+    padding: 4rem 1rem 3.5rem;
+    font-family: 'Montserrat';
+}
 /* section .meet stylesheet */
+.meet{
+    text-align: center;
+}
+
+.meet-head{
+    font-size: 22px;
+}
+
 .meet-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 15px;
     list-style: none;
     margin: 0 auto;
@@ -123,14 +145,66 @@
     flex-direction: column;
     align-items: center;
     width: 217px;
-    padding: 14px;
+    margin: 4.935%;
+    
 }
 
 .meet-item-name{
-    padding-top: 20px;
+    font-size: 14px;
+    margin: 6.9% auto;
 }
 
 .meet-item-comment{
-    padding-top: 16px;
+    font-family: 'Roboto';
+    font-size: 14px;
     text-align: center;
+}
+
+.meet-item-img{
+    border-radius: 50%;
+}
+
+/* --- user-icons --- */
+.meet-item-icon{
+    position: relative;
+}
+.meet-item-icon::after{
+    position: absolute;
+    content: "";
+    display: block;
+    width: 17px;
+    height: 17px;
+    bottom: 0;
+    right: 0;
+    padding: .5rem;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.user1::after{
+    background-image: url(../img/Shape\ 128.svg);
+    background-color: #ff4e50;
+}
+.user2::after{
+    background-image: url(../img/Shape\ 153.svg);
+    background-color: #1cd7ad;
+}
+.user3::after{
+    background-image: url(../img/Shape\ 155.svg);
+    background-color: #ffa507;
+}
+.user4::after{
+    background-image: url(../img/Shape\ 170.svg);
+    background-color: #4e73db;
+}
+
+.meet-button{
+    font-family: inherit;
+    font-size: 14px;
+    color: #ff4e50;
+    background-color: transparent;
+    padding: 0.6rem 4.346rem;    
+    border: 2px solid #ff4e50;
+    border-radius: 20px;
 }
