--- a/class-day-16/DayTask/css/styles.css
+++ b/class-day-16/DayTask/css/styles.css
@@ -2,3 +2,18 @@
     margin: 0;
     padding: 0;
 }
+
+.wrap {
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
+    grid-template-rows: 50px 50px;
+    grid-gap: 10px;
+    padding-top: 10px;
+    margin: 0 auto;
+}
+
+.wrap>div{
+    background-color: #cc0;
+    text-align: center;
+    color: #fff;
+}
