--- a/module-04/css/style.css
+++ b/module-04/css/style.css
@@ -1,10 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,400,900');
 
 * {
     margin: 0;
     padding: 0;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:300,400,900');
 
 header, main, footer {
     width: 1110px;
@@ -58,7 +57,7 @@ header, main, footer {
     width: 164px;
     height: 7px;
     background-color: #1abc9c;
-    margin: 32px auto;
+    margin: 30px auto;
 }
 
 /* Секция карточек товаров */
@@ -121,7 +120,7 @@ header, main, footer {
 
 /* Section .news stylesheets */
 .news{
-    padding-top: 105px;
+    padding: 100px 0 80px;
 }
 
 .news-title{
@@ -138,36 +137,47 @@ header, main, footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 75px;
+    margin-top: 70px;
 }
 
-.news-item {
-    width: 350px;
-    border: 1px solid red;
-    margin-top: 30px;
+.news__item {
+    width: 351px;
+    /* border: 1px solid red; */
+    margin-top: 25px;
 }
 
-.news-item-title{
-    margin-top: 14px;
+.news-item__title{
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     font-size: 18px;
     color: #0f0101;
+    margin-top: 12px;
 }
 
-.news-item-title::after {
+.news-item__title::after {
     content: "";
     display: block;
     width: 136px;
     height: 3px;
     background-color: #1abc9c;
-    margin-top: 11px;
+    margin-top: 10px;
 }
 
-.news-item-button{
+.news-item__paragraph{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    margin-top: 25px;
+}
+
+.news-item__button{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: #fff;
     background-color: #4ec6ab;
     width: 159px;
     height: 51px;
     border: none;
     border-radius: 4px;
+    margin-top: 14px;
 }
